# animge

./: .gitignore  FLET_README.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  runflet.bat
electron/: index.html  package-lock.json  package.json  vite.config.ts
electron/src/electron/: main.ts  pathResolver.ts  preload.cts
electron/src/ui/: App.tsx
python/: .gitignore  requirements.txt  requirements_torch.txt  run.py  setup.py
python/app/: model.py  schemas.py
python/app/constants/: __init__.py  constants.py
python/app/controllers/: __init__.py  generate_images.py  images.py  models.py
python/app/routes/: __init__.py  download.py  downloads.py  images.py  models.py  pipelines.py
python/app/schemas/: __init__.py  api.py  download.py  model.py  prompt.py
python/app/utils/: __init__.py  create_pipelines.py  get_scheduler.py  get_token_count.py  save_images.py
src/: App.tsx  main.py  main.tsx
src/components/: __init__.py  app.py  generator.py  model_download.py
src/components/ui/: AppHeader.tsx  PromptBox.tsx  __init__.py  counter.py  generator.py  index.ts  model_download.py  progress_bar.py
src/constants/: __init__.py  constants.py  index.ts
src/contexts/: AppContext.tsx  __init__.py  app_context.py  contexts.py  counter_context.py
src/hooks/: useTextToImage.tsx
src/layouts/: __init__.py  app_footer.py  app_header.py  app_main.py
src/styles/: index.css
src/utils/: __init__.py  get_folder_size.py  load_pretrained_model.py  responseHandler.ts  track_download_progress.py
(+28 files in other folders)
