[project]
name = "animge"
version = "0.1.0"
description = "Simple AI text-to-image generator desktop application"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "rowpacmal" }
]
dependencies = [
  "accelerate==1.10.1",
  "diffusers==0.35.1",
  "flet==0.28.3",
  "safetensors==0.6.2",
  "transformers==4.55.4"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "animge"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}